--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             ‘Preferably’: Centre revokes Covid-19 face mask mandate for air travel
         </a>
         </h1>
-        <a>
+        <a href="./1.html">
             <img src="./img/1.webp" alt="covid" />
         </a>
     </body>
