--- a/index.html
+++ b/index.html
@@ -12,5 +12,20 @@
         <a href="./1.html">
             <img src="./img/1.webp" alt="covid" />
         </a>
+
+        <hr>
+
+        <h1>
+            <a href="./1.html">
+                VIDEO | At G20 Summit, Xi Jinping confronts Canada's Trudeau over 'media leaks'
+            </a>
+        </h1>
+        <a href="./1.html">
+            <img src="./img/2.webp" alt="g20" />
+        </a>
+
+        <hr>
+        
+        
     </body>
 </html>
