--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1>
             <a href="./3.html">TMC MP’s SUV mows down 5-year-old boy in Murshidabad</a>
         </h1>
-        <a herf="./3.html">
+        <a href="./3.html">
             <img src="./img/3.webp" alt="suv" />
         </a>
         
