--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
 
         <hr>
 
-        
+        <h1>
+            <a href="./6.html">Watch- 'I'm playing for India now not IPL': Hardik Pandya on Williamson question</a>
+        </h1>
+            <a href="./6.html"><img src="./img/6.webp" alt="iam" /></a>
+
+         <hr>   
     </body>
 </html>
