--- a/index.html
+++ b/index.html
@@ -61,5 +61,16 @@
             <a href="./6.html"><img src="./img/6.webp" alt="iam" /></a>
 
          <hr>   
+
+         <h1>
+            <a href="./7.html">Sooraj Barjatya says people walked out of Hum Aapke Hain Koun premiere</a>
+         </h1>
+         <a href="./7.html">
+            <img src="./img/7.webp" alt="sooraj" />
+         </a>
+
+         <hr>
+
+
     </body>
 </html>
