--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
 
          <hr>
 
+         <h1>
+            <a href="./8.html">Kareena Kapoor shares her many moods from set as she shoots in UK</a>
+         </h1>
+         <a href="./8.html"><img src="./img/8.webp" alt="kareena" /></a>
 
+
+         <hr>
+
+         
     </body>
 </html>
