--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@
 
          <hr>
 
+         <h1>
+            <a href="./9.html">'I'll take that!': Kane Williamson's quick reflexes on display</a>
+         </h1>
+         <a href="./9.html"><img src="./img/9.webp" alt="kane" /></a>
+
+         <hr>
+
          
+
     </body>
 </html>
