--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
 
          <hr>
 
+         <h1>
+            <a href="./10.html">Did you know Martin Scorsese once wanted to cast SRK and DiCaprio in a film?</a>
+         </h1>
+         <a href="./10.html"><img src="./img/10.webp"></a>
+
+         <hr>
+
          
 
     </body>
