--- a/index.html
+++ b/index.html
@@ -101,6 +101,18 @@
 
          <hr>
 
+         <h1>
+            <a href="./12.html">
+                Watch: Sanju Samson's no-look sixes sends India cricketers, coaches in frenzy
+            </a>
+         </h1>
+         <a href="./12.html">
+            <img src="./img/12.webp" alt="kia" />
+         </a>
+
+         <hr>
+
+
          
     </body>
 </html>
