--- a/index.html
+++ b/index.html
@@ -113,6 +113,17 @@
          <hr>
 
 
-         
+        <h1>
+            <a href="./13.html">
+                Fans debate which Bollywood actor Nawaz looks like in this new pic from Haddi
+            </a>
+        </h1>        
+        <a href="./13.html">
+            <img src="./img/13.webp" alt="fan" />
+        </a>
+
+        <hr>
+
+        
     </body>
 </html>
