--- a/index.html
+++ b/index.html
@@ -147,6 +147,17 @@
 
         <hr>
 
-        
+       <h1>
+            <a href="./16.html">
+                MP: Burglars steal cash from strongroom of famous Salkanpur temple
+            </a>
+       </h1>  
+       <a href="./16.html">
+         <img src="./img/16.webp" alt="temple" />
+       </a>
+
+       <hr>
+
+       
     </body>
 </html>
