--- a/index.html
+++ b/index.html
@@ -158,6 +158,17 @@
 
        <hr>
 
+       <h1>
+          <a href="./17.html">
+            Yogi Adityanath to begin campaigning in Gujarat today
+          </a>
+       </h1>
+       <a href="./17.html">
+           <img src="./img/17.webp" alt="yogi" />
+       </a>
+
+       <hr>
+
        
     </body>
 </html>
