--- a/index.html
+++ b/index.html
@@ -169,6 +169,17 @@
 
        <hr>
 
+       <h1>
+          <a href="./18.html">
+            Britain in recession: Eight years of family income growth wiped out - report
+          </a>
+       </h1>
+       <a href="./18.html">
+            <img src="./img/18.webp" alt="britain" />
+       </a>
+
+       <hr>
+
        
     </body>
 </html>
