--- a/index.html
+++ b/index.html
@@ -180,6 +180,17 @@
 
        <hr>
 
-       
+       <h1>
+          <a href="./19.html">
+            Lankan navy attacks Tamil Nadu fisherman, arrests 14 in separate incident
+          </a>
+       </h1>
+       <a href="./19.html">
+          <img src="./img/19.webp" alt="lankan" />
+       </a>
+
+       <hr>
+
+
     </body>
 </html>
