--- a/index.html
+++ b/index.html
@@ -191,6 +191,17 @@
 
        <hr>
 
+       <h1>
+          <a href="./20.html">
+            Centre moves SC seeking review of Nov 11 order releasing Rajiv Gandhi killers
+          </a>
+       </h1>
+       <a href="./20.html">
+          <img src="./img/20.webp" alt="gandhi" />
+       </a>
 
+       <hr>
+       <hr>
+       
     </body>
 </html>
